--- a/index.html
+++ b/index.html
@@ -82,5 +82,5 @@
             </div>
         </div>
 
-<script src="/assets/js/app.js"></script></body>
+<script src="assets/js/app.js"></script></body>
 </html>
